fix info wrapper gap to 60px

--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ footer {
     .info-wrapper {
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
         flex-direction: column;
-        gap: 40px;
+        gap: 60px;
     }
 }
 
